--- a/style.css
+++ b/style.css
@@ -83,3 +83,96 @@ body {
 .note .hidden {
   display: none;
 }
+
+
+@media only screen and (max-width:600px){
+  * {
+    box-sizing: border-box;
+  }
+  
+  h1 {
+    font-size: 1rem;
+    color: white;
+    background-color: #8dc92c;
+    margin-right: 13rem;
+    margin-left: 13rem;
+    border-radius: 12px;
+    box-shadow: 2px 2px 2px #ff0000;
+  }
+  
+  body {
+    background-color: rgb(216, 203, 27);
+    background-size: cover;
+    display: flex;
+    flex-wrap: wrap;
+  
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding-top: 3rem;
+    padding-left: 11rem;
+  }
+  
+  .add {
+    background-color: #5fa2da;
+    border-radius: 3px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    /* justify-content: center; */
+    padding: 0.5rem 0.5rem;
+    /* padding-left: 30%; */
+    position:relative;
+    top: 1rem;
+    right: 1rem;
+    margin-bottom: 10%;
+  }
+  
+  .note {
+    background-color: rgb(5, 5, 5);
+    box-shadow: 5px 5px 5px 4px rgba(51, 14, 218, 0.418);
+    margin-top: 20px;
+    /* margin: 25px; */
+    height: 100px;
+    width: 300px;
+  }
+  
+  .note .tools {
+    background-color: #624ecf;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0.5rem;
+  }
+  
+  .note .tools button {
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-left: 0.5rem;
+  }
+  
+  .note .main {
+    background-color: #eee;
+    overflow: hidden;
+    /* padding-left: 10%; */
+    height: 300px;
+    width: 100%;
+  }
+  
+  .note textarea {
+     color: black;
+    text-decoration-style: dotted;
+    position: relative;
+    outline: none;
+    font-family: inherit;
+    font-size: 1.2rem;
+    border: none;
+    height: 150px;
+    width: 100%;
+  }
+  
+  .note .hidden {
+    display: none;
+  }
+}
